book/tests/snapshots/snapshot__@transforms__aggregate-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\naggregate [\n  average salary,\n  ct = count\n]\n"
input_file: book/tests/prql/transforms/aggregate-0.prql
---
SELECT
  AVG(salary),
  COUNT(*) AS ct
FROM
  employees

