book/tests/snapshots/snapshot__@transforms__aggregate-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\ngroup [title, country] (\n  aggregate [\n    average salary,\n    ct = count\n  ]\n)\n"
input_file: book/tests/prql/transforms/aggregate-1.prql
---
SELECT
  title,
  country,
  AVG(salary),
  COUNT(*) AS ct
FROM
  employees
GROUP BY
  title,
  country

