book/tests/snapshots/snapshot__@transforms__aggregate-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nderive [avg_sal = average salary]\n"
input_file: book/tests/prql/transforms/aggregate-3.prql
---
SELECT
  *,
  AVG(salary) OVER () AS avg_sal
FROM
  employees

