book/tests/snapshots/snapshot__@transforms__append-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees_1\nremove employees_2\n"
input_file: book/tests/prql/transforms/append-1.prql
---
SELECT
  *
FROM
  employees_1 AS t
EXCEPT
  ALL
SELECT
  *
FROM
  employees_2 AS b

