book/tests/snapshots/snapshot__@transforms__append-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees_1\nintersect employees_2\n"
input_file: book/tests/prql/transforms/append-2.prql
---
SELECT
  *
FROM
  employees_1 AS t
INTERSECT
ALL
SELECT
  *
FROM
  employees_2 AS b

