book/tests/snapshots/snapshot__@transforms__append-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "# Error expected\n\nfunc distinct rel -> (from t = _param.rel | group [t.*] (take 1))\nfunc union `default_db.bottom` top -> (top | append bottom | distinct)\nfunc except `default_db.bottom` top -> (top | distinct | remove bottom)\nfunc intersect_distinct `default_db.bottom` top -> (top | intersect bottom | distinct)\n"
input_file: book/tests/prql/transforms/append-3.prql
---
[E0001] Error: Missing query

