book/tests/snapshots/snapshot__@transforms__concat-and-union-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees_1\nunion employees_2\n"
input_file: book/tests/prql/transforms/concat-and-union-1.prql
---
(
  SELECT
    *
  FROM
    employees_1 AS t
)
UNION
DISTINCT
SELECT
  *
FROM
  employees_2
