book/tests/snapshots/snapshot__@transforms__derive-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nderive gross_salary = salary + payroll_tax\n"
input_file: book/tests/prql/transforms/derive-0.prql
---
SELECT
  *,
  salary + payroll_tax AS gross_salary
FROM
  employees

