book/tests/snapshots/snapshot__@transforms__derive-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nderive [\n  gross_salary = salary + payroll_tax,\n  gross_cost = gross_salary + benefits_cost\n]\n"
input_file: book/tests/prql/transforms/derive-1.prql
---
SELECT
  *,
  salary + payroll_tax AS gross_salary,
  salary + payroll_tax + benefits_cost AS gross_cost
FROM
  employees

